2013-11-20  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Added ASTNode.prettyPrint() method which will replace toString as the
    pretty-printing method
    * ASTNode.toString() no longer pretty-prints AST nodes

2013-09-06  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Added TokenCounter frontend class

2013-08-30  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * JastAddJ no longer generates JSR/RET bytecode instructions - finally
    blocks are inlined where needed

    * Empty finally blocks do not generate bytcode

    * Added explicit AST node to generate code for the implicit
    monitor exit call for synchronized blocks


2013-08-29  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * JastAddJ now generates classfiles for imported types that are imported
    from source
    * Split src/java directory into src/frontend and src/backend

2013-08-12  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Removed BranchPropagation interface
    * Refactored branch target analysis
    * Removed some `instanceof` use

2013-08-11  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Changed the branchTarget method into an inherited attribute and improved
    its performance. Rather than collecting all branches for each potential
    target statement and testing if any of those is the current branch it
    simply tests the branch statement against each possible target statement
    directly.

2013-08-10  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * The collectFinally method has been replaced by the
    inherited enclosingFinally attribute. All enclosing finally
    hosts can be found by repeatedly evaluating the new attribute.
    This allows lazier evaluation and fixes some problems with the
    old imperative method.

2013-06-04  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Renamed PlaceholderMethodDecl to StandInMethodDecl

2013-06-03  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed annotation bytecode bug affecting Class-valued annotation
    attributes
