@@ -178,27 +178,6 @@ aspect ClassPath {
   private java.util.ArrayList Program.sourcePath;
   private FileNamesPart Program.sourceFiles = new FileNamesPart(this);
 
-  public void Program.pushClassPath(String name) {
-    PathPart part = PathPart.createSourcePath(name, this);
-    if(part != null) {
-      sourcePath.add(part);
-      System.out.println("Pushing source path " + name);
-    }
-    else
-      throw new Error("Could not push source path " + name);
-    part = PathPart.createClassPath(name, this);
-    if(part != null) {
-      classPath.add(part);
-      System.out.println("Pushing class path " + name);
-    }
-  }
-  public void Program.popClassPath() {
-    if(sourcePath.size() > 0)
-      sourcePath.remove(sourcePath.size()-1);
-    if(classPath.size() > 0)
-      classPath.remove(classPath.size()-1);
-  }
-
   public void Program.initPaths() {
     if(!pathsInitialized) {
       pathsInitialized = true;
