@@ -1,3 +1,7 @@
+2013-12-12  Jesper Öqvist <jesper.oqvist@cs.lth.se>
+
+    * Removed TestServer because it was unused
+
 2013-11-20  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Added ASTNode.prettyPrint() method which will replace toString as the
